--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/dracula.css">
+		<link rel="stylesheet" href="dist/myStyle.css">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -16,8 +17,134 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h2>Иванов Алексей</h2>
+					<div style="display: flex; justify-content: space-between;">
+						<div style="flex-basis: 50%; font-size: 38px">
+							<ul>
+								<li>🗓️ Тестирую более 4 лет</li>
+								<li>👨‍💻 Пишу код</li>
+								<li>✍️ Веду тг канал @dev_qa</li>
+							</ul>
+						</div>
+						<div style="flex-basis: 50%; text-align: center;">
+							<img src="/images/myphoto.jpg" style="width: 100%; max-width: 300px;" alt="Image representing ChatGPT">
+						</div>
+					</div>
+				</section>
+				<section>
+					<h2>О чем будет доклад?</h2>
+					<ul style="font-size: 48px">
+						<li>Поговорим, что такое производительность веб-приложения, и почему она имеет важное значение</li>
+						<li>Поговорим об измерение производительности веб-приложения: метриках Web Vitals</li>
+						<li>Какие инструменты использовать для поиска проблем с производительностью</li>
+						<li>Как искать утечки памяти</li>
+					</ul>
+				</section>
+				<section id="fragments">
+					<div class="message-wrapper">
+						<div class="message received">
+							<div class="avatar">
+								<img src="/images/manager.webp" alt="Получатель">
+							</div>
+							<div>
+								<div class="sender">Manager</div>
+								<div class="content">
+									<span>Клиенты жалуются, что наше приложение зависает. Надо срочно разобраться, что происходит.</span>
+								</div>
+							</div>
+						</div>
+						<div class="message received fragment">
+							<div class="avatar">
+								<img src="/images/dev.jpg" alt="Получатель">
+							</div>
+							<div>
+								<div class="sender">Dev</div>
+								<div class="content">
+									<span>Ой, да, ну просто чудо-приложение у нас получилось! Оно просто любит приостанавливаться и думать о жизни.</span>
+								</div>
+							</div>
+						</div>
+						<div class="message received fragment">
+							<div class="avatar">
+								<img src="/images/manager.webp" alt="Получатель">
+							</div>
+							<div>
+								<div class="sender">Manager</div>
+								<div class="content">
+									<span>О, а у нас еще и тестировщики здесь! Прекрасно, вы можете помочь нам выяснить, почему приложение зависает?</span>
+								</div>
+							</div>
+						</div>
+						<div class="message sent fragment">
+							<div class="avatar">
+								<img src="/images/qa.png" alt="Получатель">
+							</div>
+							<div>
+								<div class="sender">QA</div>
+								<div class="content">
+									<span> Конечно, мы рады помочь! Может быть, наше приложение просто решило сыграть в прятки со своими багами.</span>
+								</div>
+							</div>
+						</div>
+						<div class="message received fragment">
+							<div class="avatar">
+								<img src="/images/manager.webp" alt="Получатель">
+							</div>
+							<div>
+								<div class="sender">Manager</div>
+								<div class="content">
+									<span>Ребята, будте серьезней, давайте разберемся с проблемой.</span>
+								</div>
+							</div>
+						</div>
+						<div class="message received fragment">
+							<div class="avatar">
+								<img src="/images/dev.jpg" alt="Получатель">
+							</div>
+							<div>
+								<div class="sender">Dev</div>
+								<div class="content">
+									<span>Ой, да, ну просто чудо-приложение у нас получилось! Оно просто любит приостанавливаться и думать о жизни.</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section id="fragment2">
+					<div class="message-wrapper">
+						<div class="message sent">
+							<div class="avatar">
+								<img src="/images/qa.png" alt="Получатель">
+							</div>
+							<div>
+								<div class="sender">QA</div>
+								<div class="content">
+									<span>У меня плохие новости, у меня тоже зависает при (какой-то сценарий)</span>
+								</div>
+							</div>
+						</div>
+						<div class="message received fragment">
+							<div class="avatar">
+								<img src="/images/dev.jpg" alt="Получатель">
+							</div>
+							<div>
+								<div class="sender">Dev</div>
+								<div class="content">
+									<span> У меня здесь все работает отлично. Возможно, у вас проблема с вашим окружением, пробовали кэш чистит?</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section>
+					<p>А мы не попробовали!</p>
+					<p>*ирония*</p>
+				</section>
+				<section>
+					<р1>Что такое медленное приложение?</р1>
+					<p>*ирония*</p>
+				</section>
 			</div>
 		</div>
 
