--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 				<section>
 					<h3>Проблемы на стороне клиента</h3>
 					<ul style="font-size: 28px">
-						<li >Неоптимизированный или сложный JavaScript, который замедляет загрузку страницы или рендеринг элементов на странице.</li>
-						<li class="fragment" >Излишне объемные изображения или медиафайлы, которые замедляют загрузку страницы.</li>
+						<li >Излишне объемные изображения или медиафайлы, которые замедляют загрузку страницы.</li>
+						<li  class="fragment">Неоптимизированный или сложный JavaScript, который замедляет загрузку страницы или рендеринг элементов на странице.</li>
 						<li class="fragment">Неоптимизированный CSS, который замедляет отображение страницы.</li>
 						<li class="fragment">Утечки памяти на стороне клиента, которые замедляют работу приложения со временем.</li>
 					</ul>
@@ -277,19 +277,15 @@
 					<h3>А что писать в таске?</h3>
 				</section>
 				<section>
-					<h3>Шаг 0 открываем консоль</h3>
-					<p> Перейдем на вкладку нетворк</p>
-<!--					1. Медленные сетевые запросы: Если сетевой запрос занимает слишком много времени, это может замедлить загрузку веб-страницы. Во вкладке "Network" вы можете увидеть, какие запросы занимают много времени, чтобы помочь определить проблемные места.-->
+					<h3>Lighthouse</h3>
+					<span>Кнопочку нажал и отчет готов!</span>
+					<img src="./images/mem.png">
+				</section>
+				<!--тутможно мемчик-->
+				<section>
+					<h3>Lighthouse</h3>
+					<h4>Основные метрики при загрузках страницы</h4>
 
-<!--					2. Загрузка излишних ресурсов: Если ваше приложение загружает больше данных, чем необходимо (например, большие изображения или ненужные файлы JavaScript), это может замедлить время загрузки страницы.-->
-
-<!--					3. Запросы, закончившиеся с ошибками: Если какие-либо запросы завершились ошибкой (например, HTTP статус коды 4xx или 5xx), это может указывать на проблемы, которые могут негативно сказаться на функциональности и производительности приложения.-->
-
-<!--					4. Проблемы с кешированием: Если ресурсы не кэшируются правильно, браузер будет загружать их с сервера при каждом новом запросе, что может увеличивать время загрузки страницы и нагрузку на сервер.-->
-
-<!--					5. Повторяющиеся или ненужные запросы: Если страница делает одинаковые запросы к одному и тому же ресурсу, или делает запросы к ресурсам, которые ей не нужны, это может замедлить время загрузки и создать ненужную нагрузку на сервер.-->
-
-<!--					Все эти проблемы могут быть идентифицированы и анализированы с помощью вкладки "Network" в инструментах разработчика браузера.-->
 				</section>
 			</div>
 		</div>
