--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 		UL LI {
 			margin-bottom: 15px;
 		}
+		.nonliststyle {
+			list-style: none;
+		}
+		ul.nonliststyle li:before{
+			display: none;
+		}
 
 	</style>
 	</head>
@@ -122,6 +128,53 @@
 						</div>
 					</div>
 				</section>
+				<section>
+					<h1> О чем будем говорить? 🕵️‍♂️</h1>
+					<ul>
+						<li>🔍 Что такое утечки памяти в js</li>
+						<li>🌐 О причинах утечек памяти в браузере</li>
+						<li>👁️ Как обнаружить утечку с использованием DevTools</li>
+						<li>🛠️ Примеры утечки памяти</li>
+						<li>🤖 Автоматическое тестирование и мониторинг памяти с использованием специализированных инструментов</li>
+					</ul>
+				</section>
+				<!-- Слайд 1 -->
+				<section>
+					<h2>Что такое утечка памяти? 💭</h2>
+					<ul class="nonliststyle">
+						<li>💾 Выделение памяти без последующего освобождения</li>
+						<li>🐢 Может вызывать замедление работы и сбои</li>
+					</ul>
+				</section>
+
+				<!-- Слайд 2 -->
+				<section>
+					<h2>Примеры утечек памяти 💡</h2>
+					<ul class="nonliststyle">
+						<li>🌍 Неправильное использование глобальных переменных</li>
+						<li>⏱️ Забытые таймеры и обработчики событий</li>
+					</ul>
+				</section>
+
+				<!-- Слайд 3 -->
+				<section>
+					<h2>Важность обнаружения утечек памяти 💪</h2>
+					<ul class="nonliststyle">
+						<li>⚡ Сохранение производительности приложения</li>
+						<li>🏃‍♂️ Особенно важно для долгоживущих и ресурсоемких приложений</li>
+						<li>📱 Критично для мобильных устройств с ограниченной памятью</li>
+					</ul>
+				</section>
+
+				<!-- Слайд 4 -->
+				<section>
+					<h2>Роль QA инженера 🕵️‍♂️</h2>
+					<ul class="nonliststyle">
+						<li>🔍 Обнаружение и исправление утечек памяти</li>
+						<li>✅ Поддержание стабильности и производительности приложения</li>
+					</ul>
+				</section>
+
 				<section>
 					<h2>О чем будет доклад?</h2>
 					<ul style="font-size: 48px">
@@ -274,18 +327,26 @@
 					</div>
 				</section>
 				<section>
-					<h3>А что писать в таске?</h3>
+					<h3>А какие метрики использовать?</h3>
 				</section>
+				<section>
+					<h3>Метрики загрузки сайта</h3>
+
+				</section>
+
 				<section>
 					<h3>Lighthouse</h3>
 					<span>Кнопочку нажал и отчет готов!</span>
 					<img src="./images/mem.png">
 				</section>
-				<!--тутможно мемчик-->
 				<section>
-					<h3>Lighthouse</h3>
-					<h4>Основные метрики при загрузках страницы</h4>
-
+					<h3>С версии Lighthouse 10.0</h3>
+					<h4>Режим работы</h4>
+					<ul>
+						<li>Navigation</li>
+						<li>Timespan</li>
+						<li>Snapshot</li>
+					</ul>
 				</section>
 			</div>
 		</div>
